# frontend/src/generated/apiContract.json
@@ -3162,15 +3162,6 @@
       },
       "response_schema": {
         "data_fields": {
-          "apiContractVersion": {
-            "allowed_values": null,
-            "default": null,
-            "description": "",
-            "name": "apiContractVersion",
-            "nullable": true,
-            "required": true,
-            "type": "str"
-          },
           "bedrooms": {
             "allowed_values": null,
             "default": null,
@@ -3179,15 +3170,6 @@
             "nullable": true,
             "required": true,
             "type": "list"
-          },
-          "contractHash": {
-            "allowed_values": null,
-            "default": null,
-            "description": "",
-            "name": "contractHash",
-            "nullable": true,
-            "required": true,
-            "type": "str"
           },
           "dateRange": {
             "allowed_values": null,
@@ -3282,11 +3264,29 @@
         },
         "data_is_list": false,
         "meta_fields": {
+          "apiContractVersion": {
+            "allowed_values": null,
+            "default": null,
+            "description": "",
+            "name": "apiContractVersion",
+            "nullable": true,
+            "required": true,
+            "type": "str"
+          },
           "apiVersion": {
             "allowed_values": null,
             "default": null,
             "description": "",
             "name": "apiVersion",
+            "nullable": true,
+            "required": true,
+            "type": "str"
+          },
+          "contractHash": {
+            "allowed_values": null,
+            "default": null,
+            "description": "",
+            "name": "contractHash",
             "nullable": true,
             "required": true,
             "type": "str"
@@ -3313,7 +3313,9 @@
         "required_meta": [
           "requestId",
           "elapsedMs",
-          "apiVersion"
+          "apiVersion",
+          "apiContractVersion",
+          "contractHash"
         ]
       },
       "service_schema": {
